# aoc-py

./: pyproject.toml
aoc22/: day01.py  day02.py  day03.py  day04.py
