[tool.poetry]
name = "aoc22-py"
version = "0.1.0"
description = ""
authors = ["chbndrhnns <chbndrhnns@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "aoc"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
